added links and search
first (basic) implementation of the links and the search bar

--- a/index.html
+++ b/index.html
@@ -1,15 +1,69 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>Untitled Document</title>
-  <link rel="stylesheet" type="text/css" href="style.css">.
+<meta charset="utf-8">
+<title>Startpage</title>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<div class="main">
-	
-<img class="crop" src="images/image_0.jpg" align="middle" border="0" name="RandomImg" >
-
+<div class="main"> 
+	<img class="crop" src="images/image_0.jpg" align="middle" border="0" name="RandomImg" >
+	<div class="links">
+		<table>
+			<tbody>
+				<tr>
+					<td>
+						<ul>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4chan</a></li>
+							<li><a href="http://www.4chan.org">4c5an</a></li>
+							<li><a href="http://www.4chan.org">4c5an</a></li>
+							<li><a href="http://www.4chan.org">4c5an</a></li>
+							<li><a href="http://www.4chan.org">4c5an</a></li>
+							<li><a href="http://www.4chan.org">4c5an</a></li>
+							<li><a href="http://www.4chan.org">4c5an</a></li>
+							<li><a href="http://www.4chan.org">4c5an</a></li>
+						</ul>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+	<div class="searchb">
+		<form method="get" action="http://www.duckduckgo.com">
+    		<input type="text" name="q" placeholder="search" autocomplete="off" autofocus>
+    	</form>
+	</div>
 </div>
 <script language="JavaScript">
 <!--
@@ -20,6 +74,5 @@ var rand_no = Math.floor(829*Math.random());
 document.images['RandomImg'].src="images/image_" + rand_no + ".jpg";
 // -->
 </script>
-
 </body>
 </html>
