--- a/index.html
+++ b/index.html
@@ -4,73 +4,95 @@
 <meta charset="utf-8">
 <title>Startpage</title>
 <link rel="stylesheet" type="text/css" href="style.css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-<div class="main"> 
-	<img class="crop" src="images/image_0.jpg" align="middle" border="0" name="RandomImg" >
+<div class="main"> <img class="crop" src="images/image_0.jpg" align="middle" border="0" name="RandomImg" >
 	<div class="links">
 		<table>
 			<tbody>
+				<tr height="50">
+					<td bgcolor="#F44336"><i class="material-icons">favorite</i></td>
+					<td bgcolor="#388E3C"><i class="material-icons">book</i></td>
+					<td bgcolor="#303F9F"><i class="material-icons">folder</i></td>
+				</tr>
 				<tr>
-					<td>
-						<ul>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4chan</a></li>
-							<li><a href="http://www.4chan.org">4c5an</a></li>
-							<li><a href="http://www.4chan.org">4c5an</a></li>
-							<li><a href="http://www.4chan.org">4c5an</a></li>
-							<li><a href="http://www.4chan.org">4c5an</a></li>
-							<li><a href="http://www.4chan.org">4c5an</a></li>
-							<li><a href="http://www.4chan.org">4c5an</a></li>
-							<li><a href="http://www.4chan.org">4c5an</a></li>
-						</ul>
-					</td>
+					<td>link1</td>
+					<td>link14</td>
+					<td>link27</td>
+				</tr>
+				<tr>
+					<td>link2</td>
+					<td>link15</td>
+					<td>link28</td>
+				</tr>
+				<tr>
+					<td>link3</td>
+					<td>link16</td>
+					<td>link29</td>
+				</tr>
+				<tr>
+					<td>link4</td>
+					<td>link17</td>
+					<td>link30</td>
+				</tr>
+				<tr>
+					<td>link5</td>
+					<td>link18</td>
+					<td>link31</td>
+				</tr>
+				<tr>
+					<td>link6</td>
+					<td>link19</td>
+					<td>link32</td>
+				</tr>
+				<tr>
+					<td>link7</td>
+					<td>link20</td>
+					<td>link33</td>
+				</tr>
+				<tr>
+					<td>link8</td>
+					<td>link21</td>
+					<td>link34</td>
+				</tr>
+				<tr>
+					<td>link9</td>
+					<td>link22</td>
+					<td>link35</td>
+				</tr>
+				<tr>
+					<td>link10</td>
+					<td>link23</td>
+					<td>link36</td>
+				</tr>
+				<tr>
+					<td>link11</td>
+					<td>link24</td>
+					<td>link37</td>
+				</tr>
+				<tr>
+					<td>link12</td>
+					<td>link25</td>
+					<td>link38</td>
+				</tr>
+				<tr>
+					<td>link13</td>
+					<td>link26</td>
+					<td>link39</td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
 	<div class="searchb">
 		<form method="get" action="http://www.duckduckgo.com">
-    		<input type="text" name="q" placeholder="search" autocomplete="off" autofocus>
-    	</form>
+			<input type="text" name="q" placeholder="search" autocomplete="off" autofocus>
+		</form>
 	</div>
 </div>
 <script language="JavaScript">
 <!--
-// Genarate random value from 0-5
 var rand_no = Math.floor(829*Math.random());
-
-// This defines the source of the preview image  (For example images/image_0.jpg)
 document.images['RandomImg'].src="images/image_" + rand_no + ".jpg";
 // -->
 </script>
