--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div class="links">
 		<table>
 			<tbody>
-				<tr height="50">
+				<tr class="theader" height="50">
 					<td bgcolor="#F44336"><i class="material-icons">favorite</i></td>
 					<td bgcolor="#388E3C"><i class="material-icons">book</i></td>
 					<td bgcolor="#303F9F"><i class="material-icons">folder</i></td>
