--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<tr>
 					<td><a href="https://www.amazon.com/">amazon</a></td>
 					<td><a href="pretendyoure.xyz/zy/">cah</a></td>
-					<td><a href="https://learn.hawkeslearning.com/">hawkes</a></td>
+					<td><a href="https://www.wikipedia.org/">wikipedia</a></td>
 				</tr>
 				<tr>
 					<td bgcolor="#616161"><i class="material-icons">movie</i></td>
@@ -79,7 +79,6 @@
 				<tr>
 					<td><a href="https://www.vrv.co/">vrv</a></td>
 					<td><a href="http://www.4chan.org/vg/">/vg/</a></td>
-					<td><classical/td>
 				</tr>
 			</tbody>
 		</table>
@@ -91,10 +90,8 @@
 	</div>
 </div>
 <script language="JavaScript">
-<!--
 var rand_no = Math.floor(829*Math.random());
 document.images['RandomImg'].src="images/image_" + rand_no + ".jpg";
-// -->
 </script>
 </body>
 </html>
