--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 				<tr>
 					<td><a href="https://www.vrv.co/">vrv</a></td>
 					<td><a href="http://www.4chan.org/vg/">/vg/</a></td>
+					<td>classical</td>
 				</tr>
 			</tbody>
 		</table>
