--- a/index.html
+++ b/index.html
@@ -11,37 +11,37 @@
 	<div class="links">
 		<table>
 			<tbody>
-				<tr class="theader" height="50">
+				<tr>
 					<td bgcolor="#D32F2F"><i class="material-icons">favorite</i></td>
 					<td bgcolor="#303F9F"><i class="material-icons">folder</i></td>
 					<td bgcolor="#388E3C"><i class="material-icons">book</i></td>
 				</tr>
-				<tr>
+				<tr class="theader">
 					<td><a href="https://inbox.google.com/">inbox</a></td>
 					<td><a href="https://discordapp.com/login">discord</a></td>
 					<td><a href="http://gmail.uncc.edu/">email</a></td>
 				</tr>
-				<tr>
+				<tr class="theader">
 					<td><a href="https://myanimelist.net/animelist/smoothtoast">mal</a></td>
 					<td><a href="https://www.rockpapershotgun.com/">rps</a></td>
 					<td><a href="https://my.uncc.edu/">myuncc</a></td>
 				</tr>
-				<tr>
+				<tr class="theader">
 					<td><a href="http://www.trakt.tv/">trakt</a></td>
 					<td><a href="http://www.pcgamer.com/">pcgamer</a></td>
 					<td><a href="https://drive.google.com/drive/u/0/my-drive">drive</a></td>
 				</tr>
-				<tr>
+				<tr class="theader">
 					<td><a href="https://animebytes.tv/">animebytes</a></td>
 					<td><a href="https://drive.google.com/folderview?id=0B_VmbVyD4eT3N1VUbGN4Wjd5OVE">adrive</a></td>
 					<td><a href="https://learn.hawkeslearning.com/">hawkes</a></td>
 				</tr>
-				<tr>
+				<tr class="theader">
 					<td><a href="https://calendar.google.com/calendar/render#main_7">calendar</a></td>
 					<td><a href="https://www.nexusmods.com/games/?">nexus</a></td>
 					<td><a href="https://www.cymath.com/">cymath</a></td>
 				</tr>
-				<tr>
+				<tr class="theader">
 					<td><a href="https://www.amazon.com/">amazon</a></td>
 					<td><a href="pretendyoure.xyz/zy/">cah</a></td>
 					<td><a href="https://www.wikipedia.org/">wikipedia</a></td>
@@ -51,32 +51,32 @@
 					<td bgcolor="#7cb342"><i class="material-icons">dashboard</i></td>
 					<td bgcolor="#F44336"><i class="material-icons">headset</i></td>
 				</tr>
-				<tr>
+				<tr class="theader">
 					<td><a href="http://kissasian.ch/Drama/Running-Man-Game-Show">running man</a></td>
 					<td><a href="http://www.4chan.org/g/">/g/</a></td>
 					<td><a href="https://soundcloud.com/smooothtoast/sets/bg">chill</a></td>
 				</tr>
-				<tr>
+				<tr class="theader">
 					<td><a href="https://www.dramafever.com/">dramafever</a></td>
 					<td><a href="http://www.4chan.org/wg/">/wg/</a></td>
 					<td><a href="https://www.youtube.com/playlist?list=PLoa6qChudGrCQn725hspT0cXfiVxHpprl">japanese</a></td>
 				</tr>
-				<tr>
+				<tr class="theader">
 					<td><a href="www.youtube.com/feed/watch_later">watch later</a></td>
 					<td><a href="http://www.4chan.org/w/">/w/</a></td>
 					<td><a href="https://www.youtube.com/playlist?list=PLoa6qChudGrCMgloXioFybS918jx9ecVO">kmusic</a></td>
 				</tr>
-				<tr>
+				<tr class="theader">
 					<td><a href="https://www.netflix.com/">netflix</a></td>
 					<td><a href="http://www.4chan.org/a/">/a/</a></td>
 					<td><a href="https://www.youtube.com/playlist?list=PLoa6qChudGrBF0CYXVaEa_9PS13tTJs_s">music v1</a></td>
 				</tr>
-				<tr>
+				<tr class="theader">
 					<td><a href="https://www.youtube.com/feed/subscriptions">youtube</a></td>
 					<td><a href="http://www.4chan.org/v/">/v/</a></td>
 					<td><a href="https://www.youtube.com/playlist?list=PLoa6qChudGrCEXwL6NL6s6ZX7MfGy5n0r">music v2</a></td>
 				</tr>
-				<tr>
+				<tr class="theader">
 					<td><a href="https://www.vrv.co/">vrv</a></td>
 					<td><a href="http://www.4chan.org/vg/">/vg/</a></td>
 					<td>classical</td>
