separate script from index.html
for better compatibility with chrome extensions

--- a/index.html
+++ b/index.html
@@ -90,9 +90,7 @@
 		</form>
 	</div>
 </div>
-<script language="JavaScript">
-var rand_no = Math.floor(829*Math.random());
-document.images['RandomImg'].src="images/image_" + rand_no + ".jpg";
-</script>
+<SCRIPT SRC="script.js">
+</SCRIPT
 </body>
 </html>
