--- a/index.html
+++ b/index.html
@@ -17,34 +17,34 @@
 					<td bgcolor="#388E3C"><i class="material-icons">book</i></td>
 				</tr>
 				<tr class="theader">
-					<td><a href="https://inbox.google.com/">inbox</a></td>
-					<td><a href="https://discordapp.com/login">discord</a></td>
-					<td><a href="http://gmail.uncc.edu/">email</a></td>
+					<td><a href="">link1</a></td>
+					<td><a href="">link7</a></td>
+					<td><a href="">link13</a></td>
 				</tr>
 				<tr class="theader">
-					<td><a href="https://myanimelist.net/animelist/smoothtoast">mal</a></td>
-					<td><a href="https://www.rockpapershotgun.com/">rps</a></td>
-					<td><a href="https://my.uncc.edu/">myuncc</a></td>
+					<td><a href="">link2</a></td>
+					<td><a href="">link8</a></td>
+					<td><a href="">link14</a></td>
 				</tr>
 				<tr class="theader">
-					<td><a href="http://www.trakt.tv/">trakt</a></td>
-					<td><a href="http://www.pcgamer.com/">pcgamer</a></td>
-					<td><a href="https://drive.google.com/drive/u/0/my-drive">drive</a></td>
+					<td><a href="">link3</a></td>
+					<td><a href="">link9</a></td>
+					<td><a href="">link15</a></td>
 				</tr>
 				<tr class="theader">
-					<td><a href="https://animebytes.tv/">animebytes</a></td>
-					<td><a href="https://drive.google.com/folderview?id=0B_VmbVyD4eT3N1VUbGN4Wjd5OVE">adrive</a></td>
-					<td><a href="https://learn.hawkeslearning.com/">hawkes</a></td>
+					<td><a href="">link4</a></td>
+					<td><a href="">link10</a></td>
+					<td><a href="">link16</a></td>
 				</tr>
 				<tr class="theader">
-					<td><a href="https://calendar.google.com/calendar/render#main_7">calendar</a></td>
-					<td><a href="https://www.nexusmods.com/games/?">nexus</a></td>
-					<td><a href="https://www.cymath.com/">cymath</a></td>
+					<td><a href="">link5</a></td>
+					<td><a href="">link11</a></td>
+					<td><a href="">link17</a></td>
 				</tr>
 				<tr class="theader">
-					<td><a href="https://www.amazon.com/">amazon</a></td>
-					<td><a href="pretendyoure.xyz/zy/">cah</a></td>
-					<td><a href="https://www.wikipedia.org/">wikipedia</a></td>
+					<td><a href="">link6</a></td>
+					<td><a href="">link12</a></td>
+					<td><a href="">link18</a></td>
 				</tr>
 				<tr>
 					<td bgcolor="#616161"><i class="material-icons">movie</i></td>
@@ -52,34 +52,34 @@
 					<td bgcolor="#F44336"><i class="material-icons">headset</i></td>
 				</tr>
 				<tr class="theader">
-					<td><a href="http://kissasian.ch/Drama/Running-Man-Game-Show">running man</a></td>
-					<td><a href="http://www.4chan.org/g/">/g/</a></td>
-					<td><a href="https://soundcloud.com/smooothtoast/sets/bg">chill</a></td>
+					<td><a href="">link19</a></td>
+					<td><a href="">link25</a></td>
+					<td><a href="">link31</a></td>
 				</tr>
 				<tr class="theader">
-					<td><a href="https://www.dramafever.com/">dramafever</a></td>
-					<td><a href="http://www.4chan.org/wg/">/wg/</a></td>
-					<td><a href="https://www.youtube.com/playlist?list=PLoa6qChudGrCQn725hspT0cXfiVxHpprl">japanese</a></td>
+					<td><a href="">link20</a></td>
+					<td><a href="">link26</a></td>
+					<td><a href="">link32</a></td>
 				</tr>
 				<tr class="theader">
-					<td><a href="www.youtube.com/feed/watch_later">watch later</a></td>
-					<td><a href="http://www.4chan.org/w/">/w/</a></td>
-					<td><a href="https://www.youtube.com/playlist?list=PLoa6qChudGrCMgloXioFybS918jx9ecVO">kmusic</a></td>
+					<td><a href="">link21</a></td>
+					<td><a href="">link27</a></td>
+					<td><a href="">link33</a></td>
 				</tr>
 				<tr class="theader">
-					<td><a href="https://www.netflix.com/">netflix</a></td>
-					<td><a href="http://www.4chan.org/a/">/a/</a></td>
-					<td><a href="https://www.youtube.com/playlist?list=PLoa6qChudGrBF0CYXVaEa_9PS13tTJs_s">music v1</a></td>
+					<td><a href="">link22</a></td>
+					<td><a href="">link28</a></td>
+					<td><a href="">link34</a></td>
 				</tr>
 				<tr class="theader">
-					<td><a href="https://www.youtube.com/feed/subscriptions">youtube</a></td>
-					<td><a href="http://www.4chan.org/v/">/v/</a></td>
-					<td><a href="https://www.youtube.com/playlist?list=PLoa6qChudGrCEXwL6NL6s6ZX7MfGy5n0r">music v2</a></td>
+					<td><a href="">link23</a></td>
+					<td><a href="">link29</a></td>
+					<td><a href="">link35</a></td>
 				</tr>
 				<tr class="theader">
-					<td><a href="https://www.vrv.co/">vrv</a></td>
-					<td><a href="http://www.4chan.org/vg/">/vg/</a></td>
-					<td>classical</td>
+					<td><a href="">link24</a></td>
+					<td><a href="">link30</a></td>
+					<td><a href="">link36</a></td>
 				</tr>
 			</tbody>
 		</table>
